2010-01-14  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/util/configuration.py:
	New configuration option dbschemas.

2010-01-14  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/dbdata.py:
	Consider schemas in connection pool caching.

2010-01-14  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Add usage warning to PostgreSQLAccessor._postgresql_initialize_connection.

2010-01-14  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	Cosmetic change in db schemas tests.

2010-01-13  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/postgresql.py:
	Make sure search_path setting SQL command is applied only when needed.

2010-01-13  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/_test.py:
	* lib/pytis/data/dbdata.py:
	* lib/pytis/data/postgresql.py:
	Search_path support in DB interface.

2010-01-13  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/data.py:
	* lib/pytis/data/dbapi.py:
	* lib/pytis/data/postgresql.py:
	Pass connection name to all relevant places in DB interface.

2010-01-21  Tomas Cerha  <cerha@brailcom.org>

	* INSTALL:
	* NEWS:
	* lib/pytis/__init__.py:
	Released version 1.0.0.

2010-01-19  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/types_.py:
	* lib/pytis/form/inputfield.py:
	* lib/pytis/form/list.py:
	* lib/pytis/presentation/field.py:
	* lib/pytis/presentation/spec.py:
	Allow using variable db table function arguments in codebooks.

2010-01-18  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/util/configuration.py:
	Add dbschemas configuration option (without real effect).
	
	This change is here not to break Wiking after adding dbschemas support to it.
	Full pytis dbschemas support will be merged in after it is tested.
	

2010-01-15  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/data/postgresql.py:
	* lib/pytis/extensions/dbutils.py:
	Allow passing transaction to db counter nextval().

2010-01-13  Milan Zamazal  <pdm@brailcom.org>

	* defs/menu.py: